--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,13 @@
   <body>
     <h1>Portfolio</h1>
     <hr>
-    <div class="row>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-" style="border: 1px solid;">
-        Websites
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-" style="border: 1px solid;">
-        Github
-      </div>
+    <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-" style="border: 1px solid;">
+        Website
     </div>
+    <div class="col-lg-6 col-md-6 col-sm-6 col-" style="border: 1px solid;">
+        Github
+    </div>
+</div>
   </body>
 </html>
